@@ -10,7 +10,7 @@
   <br><br>
   <center><h2><b>A multi-platform Atari 2600 VCS emulator</b></h2></center>
 
-  <center><h4><b>Release 6.0</b></h4></center>
+  <center><h4><b>Release 6.1</b></h4></center>
   <br><br>
 
   <center><h2><b>User's Guide</b></h2></center>
@@ -287,7 +287,7 @@
       AtariVox</a> and <a href="http://www.vectrex.biz/MemCard.htm">SaveKey</a> controllers,
       as well as FLASH support in various cartridge schemes</li>
     <li>Supports all known bankswitching schemes (let us know if there's one we missed)</li>
-    <li>Supports DPC+/CDF bankswitching schemes from the <a href="http://harmony.atariage.com">Harmony Cart</a>,
+    <li>Supports DPC+/CDF(J) bankswitching schemes from the <a href="http://harmony.atariage.com">Harmony Cart</a>,
       including <a href="http://thumbulator.blogspot.ca">partial emulation of the ARM processor</a></li>
     <li>Supports cartridge autodetection for almost all bankswitching schemes</li>
     <li>Supports using ROM filename extensions to force specific bankswitching schemes</li>
@@ -2156,12 +2156,13 @@
     </tr>
 
     <tr>
-      <td><pre>-ctrlcombo &lt;1|0&gt;</pre></td>
-      <td>Use control-x key combos. This is normally enabled, since the
-      'Quit' command is tied to 'Control-q'. However, there are times when
-      a 2-player game is using either the 'f' or 'r' keys for movement,
+      <td><pre>-modcombo &lt;1|0&gt;</pre></td>
+      <td>Use modifier(Shift/Alt/Control)-x key combos. This is normally enabled,
+      since the 'Quit' command is tied to 'Control-q'. However, there are times
+      when you want to disable them.</br>
+      E.g. a 2-player game is using either the 'f' or 'r' keys for movement,
       and pressing Control (for Fire) will perform an unwanted action
-      associated with Control-r or Control-f.</td>
+      associated with Control-r or Control-f default keys.</td>
     </tr>
 
     <tr>
@@ -2535,17 +2536,17 @@
       <td><pre>-&lt;plr.|dev.&gt;cpurandom &lt;S,A,X,Y,P&gt;</pre></td>
       <td>On reset, randomize the content of the specified CPU registers.</td>
     </tr><tr>
-      <td><pre>dev.tiadriven &lt;1|0&gt;</pre></td>
+      <td><pre>-dev.tiadriven &lt;1|0&gt;</pre></td>
       <td>Set unused TIA pins to be randomly driven high or low on a read/peek.
           If disabled, use the last databus value for those pins instead.</td>
     </tr><tr>
-      <td><pre>dev.rwportbreak &lt;1|0&gt;</pre></td>
+      <td><pre>-dev.rwportbreak &lt;1|0&gt;</pre></td>
       <td>Since the 2600 has no dedicated R/W line, different addresses are used
 	    for RAM read or write access. If the code reads from such a write address, this causes
 		an unwanted, semi-random write to that address.
 		When this option is enabled, such reads interrupt emulation and the debugger is entered.</td>
     </tr><tr>
-      <td><pre>dev.thumb.trapfatal &lt;1|0&gt;</pre></td>
+      <td><pre>-dev.thumb.trapfatal &lt;1|0&gt;</pre></td>
       <td>When enabled, this allows the Thumb ARM emulation to
         throw an exception and enter the debugger on fatal errors. When disabled, such
         fatal errors are simply logged, and emulation continues. Do not use this
@@ -2646,7 +2647,7 @@
           <tr><td>VSync</td><td>Enable vertical synced updates</td><td>-vsync</td></tr>
           <tr><td>Fast SuperCharger load</td><td>Skip progress loading bars for SuperCharger ROMs</td><td>-fastscbios</td></tr>
           <tr><td>Show UI messages</td><td>Overlay UI messages onscreen</td><td>-uimessages</td></tr>
-          <tr><td>Center window</td><td>Attempt to center application window</td><td>-center</td></tr>
+          <tr><td>Center window</td><td>Attempt to center application windows, else position at last position</td><td>-center</td></tr>
           <tr><td>Multi-threading</td><td>Enable multi-threaded rendering</td><td>-threads</td></tr>
         </table>
       </td>
@@ -2858,10 +2859,10 @@
     <li>If you wish to remap emulation events, click the 'Emul. Events' tab.
       Otherwise, click the 'UI Events' tab for user interface events.</li>
     <li>Select event you want to remap and click the 'Map' button.</li>
-    <li>Press a key or a joystick button, and that key/button will be bound
-      to the selected event. If nothing seems to happen, either Stella
-      can't see the input device, or the selected event doesn't support being
-      remapped to the input device.</li>
+    <li>Press a key (or a modifier+key combination) or a joystick button, and that
+      key/button will be bound to the selected event. If nothing seems to happen,
+      either Stella can't see the input device, or the selected event doesn't
+      support being remapped to the input device.</li>
     <li>Cancel a remap in progress by clicking 'Cancel', erase a mapping by
       clicking 'Erase', or reset to default mapping by clicking 'Reset'</li>
     <li>Reset to default <b>all</b> mappings by clicking 'Defaults'.</li>
@@ -2899,7 +2900,7 @@
           <tr><td>Allow all 4 directions ...</td><td>Allow all 4 joystick directions to be pressed simultaneously</td><td>-joyallow4</td></tr>
           <tr><td>Grab mouse ...</td><td>Keep mouse in window in emulation mode<br/>(only when used as controller)<br/>
                   Note: The sensitivity may greatly vary when the mouse is not grabbed.</td><td>-grabmouse</td></tr>
-          <tr><td>Use control key combos</td><td>Enable using Control key in keyboard actions</td><td>-ctrlcombo</td></tr>
+          <tr><td>Use modifier key combos</td><td>Enable using modifier keys in keyboard actions</td><td>-modcombo</td></tr>
           <tr><td>Swap Stelladaptor ports</td><td>Swap the order of the detected Stelladaptors/2600-daptors (see <b>Advanced Configuration - <a href="#Adaptor">Stelladaptor/2600-daptor Support</a></b>)</td><td>-saport</td></tr>
           <tr><td>Joystick database</td><td>Show all joysticks that Stella knows about, with the option to remove them</td><td>&nbsp;</td></tr>
           <tr><td>Erase EEPROM</td><td>Erase the whole AtariVox/SaveKey flash memory</td><td>&nbsp;</td></tr>
